Fix responsive and disable animations on mobile

--- a/_sass/headline.scss
+++ b/_sass/headline.scss
@@ -65,12 +65,13 @@
   }
 
   .headline-title {
-    font-size: 3.5rem;
+    font-size: 3.2rem;
     padding: 0 3rem;
   }
 
   .headline-button {
     margin-left: 3rem;
+    font-size: 1.4rem;
   }
 
   .headline-circle-background {
